Dependency clean up
Eliminated a lot of unneeded or unused dependencies from previous
experiments. Jars being built are now rather minimally and docker
containers are "working". Now the containers are usable to the sense of
trying to "run" them leads to discovering the "how do you run this in
production" step. Slowly!

Signed-off-by: Gabriel Harris-Rouquette <gabizou@me.com>