@@ -34,7 +34,6 @@
         </profile>
     </profiles>
     <modules>
-        <module>utils</module>
         <module>artifact-api</module>
         <module>artifact-impl</module>
         <module>artifact-query-api</module>
@@ -44,11 +43,10 @@
         <module>versions-query-impl</module>
         <module>versions-impl</module>
         <module>version-synchronizer</module>
-        <module>integration-tests</module>
         <module>sonatype</module>
         <module>auth-api</module>
         <module>auth-impl</module>
-        <module>auth-common</module>
+        <module>server-auth</module>
     </modules>
 
     <build>
@@ -100,8 +98,8 @@
                             <header>HEADER.txt</header>
                             <excludes>
                                 <exclude>**/README</exclude>
-                                <exclude>src/test/resources/**</exclude>
-                                <exclude>src/main/resources/**</exclude>
+                                <exclude>src/test/resources/**/*</exclude>
+                                <exclude>src/main/resources/**/*</exclude>
                                 <exclude>.run/**</exclude>
                                 <exclude>**/*.xml</exclude>
                                 <exclude>**/*.yaml</exclude>
@@ -109,6 +107,7 @@
                                 <exclude>.editorconfig</exclude>
                                 <exclude>LICENSE.txt</exclude>
                                 <exclude>config/**</exclude>
+                                <exclude>**/*.conf</exclude>
                             </excludes>
                         </licenseSet>
                     </licenseSets>
@@ -134,7 +133,7 @@
                     <skip>true</skip>
                     <images>
                         <image>
-                            <name>%a:%l</name>
+                            <name>%g/%a:%l</name>
                             <build>
                                 <from>${lagom.docker.image}</from>
                                 <tags>
@@ -168,7 +167,6 @@
                 </configuration>
             </plugin>
             <plugin>
-                <inherited>false</inherited>
                 <groupId>org.liquibase</groupId>
                 <artifactId>liquibase-maven-plugin</artifactId>
                 <version>4.4.2</version>
@@ -224,6 +222,11 @@
             <dependency>
                 <groupId>org.pac4j</groupId>
                 <artifactId>pac4j-http</artifactId>
+                <version>${pac4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.pac4j</groupId>
+                <artifactId>pac4j-jwt</artifactId>
                 <version>${pac4j.version}</version>
             </dependency>
             <dependency>
@@ -291,20 +294,21 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <scala.binary.version>2.13</scala.binary.version>
-        <swagger.version>2.1.1</swagger.version>
         <junit.version>5.7.2</junit.version>
         <jackson.version>2.10.4</jackson.version>
-        <lagom.openapi.version>1.2.2</lagom.openapi.version>
         <lagom.version>1.6.5</lagom.version>
         <pac4j.version>3.7.0</pac4j.version>
         <lagom.pac4j.version>2.2.1</lagom.pac4j.version>
         <vavr.version>0.10.3</vavr.version>
-        <version.number>${git.commit.time}.${git.commit.id.abbrev}</version.number>
         <mycila.license.version>4.0.rc2</mycila.license.version>
         <akka.version>2.6.14</akka.version>
-        <lagom.docker.image>adoptopenjdk/openjdk16</lagom.docker.image>
+        <lagom.docker.image>openjdk:16-alpine3.13</lagom.docker.image>
         <postgres.version>42.2.18</postgres.version>
         <hibernate.version>5.5.4.Final</hibernate.version>
         <guice.version>5.0.1</guice.version>
+        <play.docker.jvm.startup>
+            java -XX:+UnlockExperimentalVMOptions --illegal-access=permit -cp '/maven/*'
+            -Dplay.http.secret.key=$PLAY_APPLICATION_SECRET play.core.server.ProdServerStart
+        </play.docker.jvm.startup>
     </properties>
 </project>
